@@ -1,0 +1,15 @@
+<?php
+
+  /**
+   * @version $Id$
+   * @author Matthew McNaney <mcnaney at gmail dot com>
+   */
+
+  // YouTube filter
+$filters['youtube']['title']    = 'YouTube';
+$filters['youtube']['template'] = 'youtube.tpl';
+$filters['youtube']['width']    = 425;
+$filters['youtube']['height']   = 350;
+
+
+?>
