@@ -1,0 +1,14 @@
+{START_FORM}
+
+<p style="margin-bottom : 10px;"><strong>{URL_LABEL}</strong><br />
+{URL}<p>
+
+<p style="margin-bottom : 10px"><strong>{TITLE_LABEL}</strong><br />
+{TITLE}</p>
+
+<p style="margin-bottom : 10px"><strong>{ETYPE_LABEL}</strong> 
+{ETYPE}</p>
+
+<div class="align-center">{SUBMIT}<br /><br />{CLOSE}</div>
+{END_FORM}
+
